--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,6 +30,9 @@ set-option -g pane-active-border-fg green
 set-window-option -g utf8 on
  
  
+# increase escape time
+set -S escape-time 1
+ 
 # basic settings
 set-window-option -g xterm-keys on # for vim
 set-window-option -g mode-keys vi # vi key
@@ -77,7 +80,7 @@ unbind %   # unbind vertical split
 # Bindings
 ############################################################################
 # reload tmux conf
-bind-key r source-file ~/.tmux.conf
+bind-key r source-file ~/.tmux.conf\; display "Reloaded!"
  
 #bind Escape copy-mode
  
@@ -117,14 +120,8 @@ bind C-j previous-window
 bind C-k next-window
 bind-key C-a last-window # C-a C-a for last active window
 bind A command-prompt "rename-window %%"
-# By default, all windows in a session are constrained to the size of the 
-# smallest client connected to that session, 
-# even if both clients are looking at different windows. 
-# It seems that in this particular case, Screen has the better default 
-# where a window is only constrained in size if a smaller client 
-# is actively looking at it.
 setw -g aggressive-resize on
- 
+set -g base-index 1 
 ############################################################################
 # panes
 ############################################################################
@@ -134,6 +131,7 @@ bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
+set -g pane-base-index 1 
  
 # Resizing ---------------------------------------------------------------
 bind-key C-h resize-pane -L
