more tmux changes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,15 +23,14 @@ set-option -g history-limit 10000
  
 # colors
 #setw -g mode-bg black
-set-option -g default-terminal "screen-256color" #"xterm-256color" # "screen-256color"
+set-option -g default-terminal "screen-256color" 
 set-option -g pane-active-border-fg green
  
 # utf8 support
 set-window-option -g utf8 on
  
- 
 # increase escape time
-set -S escape-time 1
+set -sg escape-time 1
  
 # basic settings
 set-window-option -g xterm-keys on # for vim
@@ -39,7 +38,6 @@ set-window-option -g mode-keys vi # vi key
 set-window-option -g monitor-activity on
 set -g visual-activity on
 #set-window-option -g window-status-current-fg white
-#
 #setw -g window-status-current-attr reverse
  
 # Automatically set window title
@@ -85,7 +83,7 @@ bind-key r source-file ~/.tmux.conf\; display "Reloaded!"
 #bind Escape copy-mode
  
 # new split in current pane (horizontal / vertical)
-bind-key - split-window -v # split pane horizontally
+bind-key - split-window -v # s+lit pane horizontally
 bind-key \ split-window -h # split pane vertically
  
 # list panes
@@ -104,24 +102,31 @@ bind-key Enter break-pane
 #bind-key j command-prompt "joinp -t:0"
 bind-key Space command-prompt "joinp -t:%%" # %% = prompt for window.pane [-V|H] # vert|hor split
  
-#previous pane
-bind-key -n C-up prev
-bind-key -n C-left prev
- 
-#next pane
-bind-key -n C-right next
-bind-key -n C-down next
- 
 ############################################################################
 # windows
 ############################################################################
 set-window-option -g window-status-current-bg red
-bind C-j previous-window
-bind C-k next-window
-bind-key C-a last-window # C-a C-a for last active window
+bind-key l last-window # C-a l for last active window
 bind A command-prompt "rename-window %%"
 setw -g aggressive-resize on
+set -g status-justify centre #center window list
 set -g base-index 1 
+
+bind -r C-h select-window -t :-
+bind -r C-l select-window -t :+
+# Coloring ---------------------------------------------------------------
+
+setw -g window-status-fg cyan
+setw -g window-status-bg default
+setw -g window-status-attr dim
+
+setw -g window-status-current-fg white
+setw -g window-status-current-bg red
+setw -g window-status-current-attr bright
+# Coloring for command line-------------------------------------------------
+set -g message-fg white
+set -g message-bg black
+set -g message-attr bright
 ############################################################################
 # panes
 ############################################################################
@@ -134,21 +139,25 @@ bind-key l select-pane -R
 set -g pane-base-index 1 
  
 # Resizing ---------------------------------------------------------------
-bind-key C-h resize-pane -L
-bind-key C-j resize-pane -D
-bind-key C-k resize-pane -U
-bind-key C-l resize-pane -R
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
  
 # use vim motion keys while in copy mode
 setw -g mode-keys vi
- 
+# Coloring ---------------------------------------------------------------
+set -g pane-border-fg green 
+set -g pane-border-bg black
+set -g pane-active-border-fg white
+set -g pane-active-border-bg red
 ############################################################################
 # layouts
 ############################################################################
-bind o select-layout "active-only"
-bind M-- select-layout "even-vertical"
-bind M-| select-layout "even-horizontal"
-bind M-r rotate-window
+#ind o select-layout "active-only"
+#ind M-- select-layout "even-vertical"
+#ind M-| select-layout "even-horizontal"
+#ind M-r rotate-window
  
  
 # focus on first window
