changes to tmux - added tmuxinator dir

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -77,21 +77,15 @@ unbind %   # unbind vertical split
 ############################################################################
 # Bindings
 ############################################################################
-# reload tmux conf
 bind-key r source-file ~/.tmux.conf\; display "Reloaded!"
- 
 #bind Escape copy-mode
- 
-# new split in current pane (horizontal / vertical)
-bind-key - split-window -v # s+lit pane horizontally
-bind-key \ split-window -h # split pane vertically
- 
-# list panes
-bind-key Space list-panes
- 
-# break-pane
+bind-key - split-window -v 
+bind-key \ split-window -h 
 bind-key Enter break-pane
  
+bind -r ( switch-client -p #go to previous session
+bind -r ) switch-client -n #go to next session
+bind P pipe-pane -o "cat >> ~/#W.log"\; display "Toggled logging to ~/#W.log" #logging 
 # join-pane [-dhv] [-l size | -p percentage] [-s src-pane]
 # [-t:dst-window.dst-pane] (destination window (dot) destination pane
 #                (alias: joinp)
@@ -101,7 +95,7 @@ bind-key Enter break-pane
 #bind-key j command-prompt "join-pane -s '%%'"
 #bind-key j command-prompt "joinp -t:0"
 bind-key Space command-prompt "joinp -t:%%" # %% = prompt for window.pane [-V|H] # vert|hor split
- 
+bind C-s set-window-option synchronize-panes #toggle for syncing panes 
 ############################################################################
 # windows
 ############################################################################
@@ -150,7 +144,8 @@ setw -g mode-keys vi
 set -g pane-border-fg green 
 set -g pane-border-bg black
 set -g pane-active-border-fg white
-set -g pane-active-border-bg red
+set -g pane-active-border-bg blue
+set -g pane-active-border-attr dark
 ############################################################################
 # layouts
 ############################################################################
