added system clipboard c/p for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -145,8 +145,7 @@ set -g pane-border-fg green
 set -g pane-border-bg black
 set -g pane-active-border-fg white
 set -g pane-active-border-bg blue
-set -g pane-active-border-attr dark
-############################################################################
+###########################################################################
 # layouts
 ############################################################################
 #ind o select-layout "active-only"
@@ -157,3 +156,10 @@ set -g pane-active-border-attr dark
  
 # focus on first window
 # select-window -t 0
+
+##########################################################################
+
+# copy current buffer to the system clipboard
+bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
+#move content from system clipboard into a new tmux buffer and pastes it
+bind C-p run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
