--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,14 +1,3 @@
-##############################
-#  _
-# | |_ _ __ ___  _   ___  __
-# | __| '_ ` _ \| | | \ \/ /
-# | |_| | | | | | |_| |>  < 
-#  \__|_| |_| |_|\__,_/_/\_\
-#
-#############################
-#
-#
-############################################################################
 ############################################################################
 # Reset Prefix
 ############################################################################
@@ -104,7 +93,7 @@ bind-key l last-window # C-a l for last active window
 bind A command-prompt "rename-window %%"
 setw -g aggressive-resize on
 set -g status-justify centre #center window list
-set -g base-index 1 
+# set -g base-index 1 
 
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
@@ -148,11 +137,10 @@ set -g pane-active-border-bg blue
 ###########################################################################
 # layouts
 ############################################################################
-#ind o select-layout "active-only"
-#ind M-- select-layout "even-vertical"
-#ind M-| select-layout "even-horizontal"
-#ind M-r rotate-window
- 
+bind o select-layout "active-only"
+bind M-- select-layout "even-vertical"
+bind M-| select-layout "even-horizontal"
+bind M-r rotate-window
  
 # focus on first window
 # select-window -t 0
