added battery life to tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 ##############################
 #  _
 # | |_ _ __ ___  _   ___  __
@@ -9,9 +8,6 @@
 #############################
 #
 #
-############################################################################
-=======
->>>>>>> 6a8cfef1174727d425cd07f226856297ae0474bc
 ############################################################################
 # Reset Prefix
 ############################################################################
@@ -58,7 +54,8 @@ set-option -g status-bg black # colour213 # pink
 set-option -g status-fg cyan
 set-option -g status-interval 5
 set-option -g status-left-length 30
-set-option -g status-left '#[fg=magenta]» #[fg=blue,bold]#T#[default]'
+# Batterylife (from SethosII)
+set-option -g status-left '#[fg=magenta]» #[fg=blue,bold]#(~/bin/tmux_battery_charge_indicator.sh)'
 set-option -g status-right '#[fg=red,bold][[ #(git branch) branch ]] #[fg=cyan]»» #[fg=blue,bold]###S #[fg=magenta]%R %m-%d#(acpi | cut -d ',' -f 2)#[default]'
 set-option -g visual-activity on
  
@@ -66,6 +63,7 @@ set-option -g visual-activity on
 set-option -g set-titles on
 set-option -g set-titles-string '#H:#S.#I.#P #W #T'
  
+# set -g terminal-overrides 'xterm*:smcup@:rmcup@'
  
 ############################################################################
 # Unbindings
