added zshrc from @spicycode

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,6 +20,9 @@ bind-key a send-prefix # for nested tmux sessions
 # large history
 set-option -g history-limit 10000
  
+# use zsh
+set-option -g default-shell /bin/zsh
+
 # colors
 #setw -g mode-bg black
 set-option -g default-terminal "screen-256color" 
