--- a/.tmux.conf
+++ b/.tmux.conf
@@ -59,7 +59,10 @@ set-option -g status-interval 5
 set-option -g status-left-length 30
 # Batterylife (from SethosII)
 set-option -g status-left '#[fg=magenta]» #[fg=blue,bold]#(~/bin/tmux_battery_charge_indicator.sh)'
-set-option -g status-right '#[fg=red,bold][[ #(git branch) branch ]] #[fg=cyan]»» #[fg=blue,bold]###S #[fg=magenta]%R %m-%d#(acpi | cut -d ',' -f 2)#[default]'
+
+set-option -g status-right '#[fg=cyan]»» #[fg=blue,bold]###S #[fg=magenta]%R %m-%d#(acpi | cut -d ',' -f 2)#[default]'
+# git branch isn't working
+# set-option -g status-right '#[fg=red,bold][[ #(git branch) branch ]] #[fg=cyan]»» #[fg=blue,bold]###S #[fg=magenta]%R %m-%d#(acpi | cut -d ',' -f 2)#[default]'
 set-option -g visual-activity on
  
 # Titles (window number, program name, active (or not)
