--- a/.gitconfig
+++ b/.gitconfig
@@ -7,7 +7,8 @@
 	rebase = true
 [push]
   default = simple
-
+[init]
+	templatedir = ~/.git_template
 [fetch]
     prune = true
 [core]
@@ -18,9 +19,7 @@
     frag = magenta bold
     old = red bold
     new = green bold
-
 [alias]
-
   br = branch
   cm = commit -am
   co = checkout
@@ -80,3 +79,4 @@
 
   ours = "!f() { git checkout --ours $@ && git add $@; }; f"
   theirs = "!f() { git checkout --theirs $@ && git add $@; }; f"
+	ctags = !.git/hooks/ctags
