--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,26 +1,6 @@
-##############################
-#  _
-# | |_ _ __ ___  _   ___  __
-# | __| '_ ` _ \| | | \ \/ /
-# | |_| | | | | | |_| |>  < 
-#  \__|_| |_| |_|\__,_/_/\_\
-#
-#############################
-#
-#
-############################################################################
-# Reset Prefix
-############################################################################
 set -g prefix C-a
 bind-key a send-prefix # for nested tmux sessions
- 
-############################################################################
-# Global options
-############################################################################
-# large history
 set-option -g history-limit 10000
- 
-# use zsh
 set-option -g default-shell /bin/zsh
 
 # colors
@@ -111,7 +91,7 @@ bind-key l last-window # C-a l for last active window
 bind A command-prompt "rename-window %%"
 setw -g aggressive-resize on
 set -g status-justify centre #center window list
-# set -g base-index 1 
+set -g base-index 0
 
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
@@ -137,14 +117,20 @@ bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
-set -g pane-base-index 1 
+set -g pane-base-index 0 
  
 # Resizing ---------------------------------------------------------------
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
- 
+
+# Use Alt-vim keys without prefix key to switch panes - from @spicycode
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D 
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R 
+
 # use vim motion keys while in copy mode
 setw -g mode-keys vi
 # Coloring ---------------------------------------------------------------
