--- a/.tmuxinator/sm.yml
+++ b/.tmuxinator/sm.yml
@@ -1,12 +1,34 @@
 name: mobile
 root: <%= ENV["BABY"] %>
-pre_window: cd mobile/
-startup_window: boom
+pre_window: cd mobile/source/src/app
+startup_window: srvc
 windows:
-  - boom:
+  - srvc:
+      layout: even-horizontal
+      panes:
+        - cd components
+        - cd components && vim
+  - ctrl:
       layout: even-horizontal
       panes:
         - vim
         - vim
-  - zsh:
-     - tmux move-window -s 1 -t 9
+  - temp:
+      layout: even-horizontal
+      panes:
+        - vim
+        - vim
+  - dist-serve:
+     - cd ../../../dist
+  - dist:
+      layout: even-horizontal
+      panes:
+        - cd ../../../dist && vim
+        - cd ../../../dist && vim
+  - karma:
+     - tmux move-window -s 5 -t 9
+     - tmux move-window -s 3 -t 1
+     - tmux move-window -s 2 -t 7
+     - tmux move-window -s 1 -t 8
+     - cd ../../
+     - g test:auto
