updated mux file for mobile and added a few aliases

--- a/.tmuxinator/sb.yml
+++ b/.tmuxinator/sb.yml
@@ -6,8 +6,8 @@ windows:
   - srvc:
       layout: even-horizontal
       panes:
-        - cd components
-        - cd components && vim
+        - cd core
+        - cd core && vim
   - ctrl:
       layout: even-horizontal
       panes:
