--- a/.tmuxinator/sm.yml
+++ b/.tmuxinator/sm.yml
@@ -1,13 +1,13 @@
 name: mobile
 root: <%= ENV["BABY"] %>
-pre_window: cd mobile/fl/src/app
+pre_window: cd mobile/src/app
 startup_window: srvc
 windows:
   - srvc:
       layout: even-horizontal
       panes:
-        - cd components
-        - cd components && vim
+        - cd core
+        - cd core && vim
   - ctrl:
       layout: even-horizontal
       panes:
@@ -18,17 +18,11 @@ windows:
       panes:
         - vim
         - vim
-  - dist-serve:
-     - cd ../../../dist
-  - dist:
-      layout: even-horizontal
-      panes:
-        - cd ../../../dist && vim
-        - cd ../../../dist && vim
-  - karma:
-     - tmux move-window -s 5 -t 9
-     - tmux move-window -s 3 -t 1
+  - zsh:
      - tmux move-window -s 2 -t 7
      - tmux move-window -s 1 -t 8
+     - tmux move-window -s 3 -t 1
+  - karma:
+     - tmux move-window -s 4 -t 9
      - cd ../../
      - g test:auto
