--- a/.tmuxinator/ir.yml
+++ b/.tmuxinator/ir.yml
@@ -1,13 +1,13 @@
-name: server
+name: iron
 root: <%= ENV["BABY"] %>
-pre_window: cd server/
+pre_window: cd iron/feedcloser
 startup_window: scripts
 windows:
   - scripts:
       layout: even-horizontal
       panes:
-        - vim test
-        - vim 
-  - mocha:
+        - cd test && vim
+        - cd src && vim 
+  - karma:
       - tmux move-window -s 1 -t 9
       - mocha
