--- a/.tmux.conf
+++ b/.tmux.conf
@@ -152,6 +152,16 @@ bind M-r rotate-window
 ##########################################################################
 
 # copy current buffer to the system clipboard
+#used on linux - not sure good for mac
 bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
 #move content from system clipboard into a new tmux buffer and pastes it
 bind C-p run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
+
+#######################################################################
+# copy/paste on mac
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
