edited setup files vimrc and tmux conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,9 +8,6 @@ set-option -g default-shell /bin/zsh
 set-option -g default-terminal "screen-256color" 
 set-option -g pane-active-border-fg green
  
-# utf8 support
-set-window-option -g utf8 on
- 
 # increase escape time
 set -sg escape-time 1
  
@@ -31,7 +28,6 @@ setw -g automatic-rename
 ############################################################################
 # Status Bar
 ############################################################################
-set-option -g status-utf8 on
 set-option -g status-justify right
 set-option -g status-bg black # colour213 # pink
 set-option -g status-fg cyan
@@ -66,8 +62,8 @@ unbind %   # unbind vertical split
 ############################################################################
 bind-key r source-file ~/.tmux.conf\; display "Reloaded!"
 #bind Escape copy-mode
-bind-key - split-window -v 
-bind-key \ split-window -h 
+bind-key - split-window -v -c '#{pane_current_path}' # Split panes horizontal
+bind-key \ split-window -h -c '#{pane_current_path}' # Split panes vertical
 bind-key Enter break-pane
  
 bind -r ( switch-client -p #go to previous session
@@ -87,6 +83,7 @@ bind C-s set-window-option synchronize-panes #toggle for syncing panes
 # windows
 ############################################################################
 set-window-option -g window-status-current-bg red
+bind-key c new-window -c '#{pane_current_path}' # Create new window
 bind-key l last-window # C-a l for last active window
 bind A command-prompt "rename-window %%"
 setw -g aggressive-resize on
@@ -159,7 +156,7 @@ bind C-p run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
 
 #######################################################################
 # copy/paste on mac
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g default-command "tmux rename-window zsh; reattach-to-user-namespace -l zsh"
 # bind-key -t vi-copy v begin-selection
 # bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 # unbind -t vi-copy Enter
