--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,15 +1,13 @@
 set -g prefix C-a
 bind-key a send-prefix # for nested tmux sessions
 set-option -g history-limit 10000
-set-option -g default-shell /usr/bin/zsh
-
+set-option -g default-shell /bin/zsh
+set-option -g default-command "tmux rename-window zsh; reattach-to-user-namespace -l zsh"
 # colors
 #setw -g mode-bg black
-set-option -g default-terminal "screen-256color" 
-set-option -g pane-active-border-fg green
- 
+set-option -g default-terminal "screen-255color" 
+set-option -g pane-active-border-style fg=green 
 # utf8 support
-set-window-option -g utf8 on
  
 # increase escape time
 set -sg escape-time 1
@@ -19,9 +17,8 @@ set-window-option -g xterm-keys on # for vim
 set-window-option -g mode-keys vi # vi key
 set-window-option -g monitor-activity on
 set -g visual-activity on
-#set-window-option -g window-status-current-fg white
-#setw -g window-status-current-attr reverse
- 
+set-window-option -g window-status-current-style fg=white
+setw -g window-status-current-style reverse 
 # Automatically set window title
 setw -g automatic-rename
  
@@ -31,7 +28,6 @@ setw -g automatic-rename
 ############################################################################
 # Status Bar
 ############################################################################
-set-option -g status-utf8 on
 set-option -g status-justify right
 set-option -g status-bg black # colour213 # pink
 set-option -g status-fg cyan
@@ -67,7 +63,7 @@ unbind %   # unbind vertical split
 bind-key r source-file ~/.tmux.conf\; display "Reloaded!"
 #bind Escape copy-mode
 bind-key - split-window -v -c '#{pane_current_path}'
-bind-key \ split-window -h -c '#{pane_current_path}'
+bind-key | split-window -h -c '#{pane_current_path}'
 bind-key Enter break-pane
  
 bind -r ( switch-client -p #go to previous session
@@ -86,7 +82,7 @@ bind C-s set-window-option synchronize-panes #toggle for syncing panes
 ############################################################################
 # windows
 ############################################################################
-set-window-option -g window-status-current-bg red
+set-window-option -g window-status-current-style bg=red
 bind-key c new-window -c '#{pane_current_path}'
 bind-key l last-window # C-a l for last active window
 bind A command-prompt "rename-window %%"
@@ -98,17 +94,17 @@ bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 # Coloring ---------------------------------------------------------------
 
-setw -g window-status-fg cyan
-setw -g window-status-bg default
-setw -g window-status-attr dim
+setw -g window-status-style fg=cyan
+setw -g window-status-style bg=default
+setw -g window-status-style dim
 
-setw -g window-status-current-fg white
-setw -g window-status-current-bg red
-setw -g window-status-current-attr bright
+setw -g window-status-current-style fg=white
+setw -g window-status-current-style bg=red
+setw -g window-status-current-style bright
 # Coloring for command line-------------------------------------------------
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
+set -g message-style fg=white
+set -g message-style bg=black
+set -g message-style bright
 ############################################################################
 # panes
 ############################################################################
@@ -135,10 +131,10 @@ bind -n M-l select-pane -R
 # use vim motion keys while in copy mode
 setw -g mode-keys vi
 # Coloring ---------------------------------------------------------------
-set -g pane-border-fg green 
-set -g pane-border-bg black
-set -g pane-active-border-fg white
-set -g pane-active-border-bg blue
+set -g pane-border-style fg=green 
+set -g pane-border-style bg=black
+set -g pane-active-border-style fg=white
+set -g pane-active-border-style bg=blue
 ###########################################################################
 # layouts
 ############################################################################
@@ -153,6 +149,23 @@ bind M-r rotate-window
 ##########################################################################
 
 # copy current buffer to the system clipboard
-bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
+# bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
 #move content from system clipboard into a new tmux buffer and pastes it
-bind C-p run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
+# bind C-p run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
+
+# currently in my C1 MBP
+# bind-key -T copy-mode C- \ send-keys -X copy-pipe-and-cancel "pbcopy"
+
+########################################################################
+# TPM config
+########################################################################
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-open'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
