updated zsh for ssh

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 set -g prefix C-a
 bind-key a send-prefix # for nested tmux sessions
 set-option -g history-limit 10000
-set-option -g default-shell /bin/zsh
+set-option -g default-shell /usr/local/bin/zsh
 set-option -g default-command "tmux rename-window zsh; reattach-to-user-namespace -l zsh"
 # colors
 #setw -g mode-bg black
