--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,7 +16,8 @@ set -sg escape-time 1
 set-window-option -g xterm-keys on # for vim
 set-window-option -g mode-keys vi # vi key
 set-window-option -g monitor-activity on
-set -g visual-activity on
+# set -g visual-activity on
+set-option -g bell-action none
 set-window-option -g window-status-current-style fg=white
 setw -g window-status-current-style reverse 
 # Automatically set window title
@@ -39,7 +40,6 @@ set-option -g status-left '#[fg=magenta]» #[fg=blue,bold]#(~/bin/tmux_battery_c
 set-option -g status-right '#[fg=cyan]»» #[fg=blue,bold]###S #[fg=magenta]%R %m-%d#(acpi | cut -d ',' -f 2)#[default]'
 # git branch isn't working
 # set-option -g status-right '#[fg=red,bold][[ #(git branch) branch ]] #[fg=cyan]»» #[fg=blue,bold]###S #[fg=magenta]%R %m-%d#(acpi | cut -d ',' -f 2)#[default]'
-set-option -g visual-activity on
  
 # Titles (window number, program name, active (or not)
 set-option -g set-titles on
