updated zshcompletions for rust and minor edit to tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -63,7 +63,7 @@ unbind %   # unbind vertical split
 bind-key r source-file ~/.tmux.conf\; display "Reloaded!"
 #bind Escape copy-mode
 bind-key - split-window -v -c '#{pane_current_path}'
-bind-key | split-window -h -c '#{pane_current_path}'
+bind-key \ split-window -h -c '#{pane_current_path}'
 bind-key Enter break-pane
  
 bind -r ( switch-client -p #go to previous session
