--- a/.gitconfig
+++ b/.gitconfig
@@ -7,19 +7,20 @@
 	rebase = true
 [push]
   default = simple
+  autoSetupRemote = true
 [init]
   templatedir = ~/.git_template
   defaultBranch = master
 [fetch]
-    prune = true
+   prune = true
 [core]
-    editor = vim
-    exludesfile = ~/.gitignore
+  editor = vim
+  exludesfile = ~/.gitignore
 [color "diff"]
-    meta = yellow bold
-    frag = magenta bold
-    old = red bold
-    new = green bold
+  meta = yellow bold
+  frag = magenta bold
+  old = red bold
+  new = green bold
 [alias]
   br = branch
   cm = commit -am
@@ -54,7 +55,6 @@
   # show diff of last commit of given branch
   dr  = "!f() { git diff "$1"^.."$1"; }; f"
   d = diff # Show what has changed but haven't been added to the index yet
-
 	amend = commit --amend            # rename your last commit
   uncommit = reset --soft HEAD^ # undos the last commit
 	# reset hard
@@ -66,10 +66,8 @@
   ch = checkout
   chb = checkout -b
   master = checkout master
-
   # replace phrase with another phrase ... use double quotes!
   replace = "!f() { git grep -l \"$1\" | xargs sed -i '' 's/$1/$2/g'; }; f"
-
 	unmerge = reset --merge ORIG_HEAD
   assume   = update-index --assume-unchanged
   unassume = update-index --no-assume-unchanged
@@ -83,6 +81,7 @@
   ours = "!f() { git checkout --ours $@ && git add $@; }; f"
   theirs = "!f() { git checkout --theirs $@ && git add $@; }; f"
 	ctags = !.git/hooks/ctags
+
 [filter "lfs"]
 	clean = git-lfs clean -- %f
 	smudge = git-lfs smudge -- %f
