updated zsh, tmux, and vim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -75,9 +75,18 @@ bind P pipe-pane -o "cat >> ~/#W.log"\; display "Toggled logging to ~/#W.log" #l
 #
 #bind C-j command-prompt "joinp"
 #bind C-j command-prompt "join-pane"
-#bind-key j command-prompt "join-pane -s '%%'"
+
+# join current pane veritcally to a specific window
+bind-key J command-prompt "join-pane -v -t '%%'"
+
+# join current pane veritcally to last active window
+bind-key P join-pane -v -t !
+
+# Move the current window to another window (target-window prompt)
+bind-key m command-prompt "move-window -t '%%'"
+
 #bind-key j command-prompt "joinp -t:0"
-bind-key Space command-prompt "joinp -t:%%" # %% = prompt for window.pane [-V|H] # vert|hor split
+# bind-key Space command-prompt "joinp -t:%%" # %% = prompt for window.pane [-V|H] # vert|hor split
 bind C-s set-window-option synchronize-panes #toggle for syncing panes 
 ############################################################################
 # windows
