--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,8 +34,8 @@ set-option -g status-bg black # colour213 # pink
 set-option -g status-fg cyan
 set-option -g status-interval 5
 set-option -g status-left-length 30
-# Batterylife (from SethosII)
-set-option -g status-left '#[fg=magenta]» #[fg=blue,bold]#(~/bin/tmux_battery_charge_indicator.sh)'
+# Batterylife (from SethosII) + Claude Monitor
+set-option -g status-left '#[fg=magenta]» #[fg=blue,bold]#(~/bin/tmux_battery_charge_indicator.sh) #[fg=yellow]#(~/bin/claude-monitor-status)'
 
 set-option -g status-right '#[fg=cyan]»» #[fg=blue,bold]###S #[fg=magenta]%R %m-%d#(acpi | cut -d ',' -f 2)#[default]'
 # git branch isn't working
@@ -87,7 +87,8 @@ bind-key m command-prompt "move-window -t '%%'"
 
 #bind-key j command-prompt "joinp -t:0"
 # bind-key Space command-prompt "joinp -t:%%" # %% = prompt for window.pane [-V|H] # vert|hor split
-bind C-s set-window-option synchronize-panes #toggle for syncing panes 
+bind C-s set-window-option synchronize-panes #toggle for syncing panes
+bind-key B run-shell "claude-monitor-daemon back" # Return to monitor
 ############################################################################
 # windows
 ############################################################################
